--- a/src/app/pages/selection-page/selection-page.component.html
+++ b/src/app/pages/selection-page/selection-page.component.html
@@ -8,7 +8,7 @@
     <div class="bt-opponent__icon">👩‍🦰</div>
     <div class="bt-opponent__text">Local player</div>
   </button>
-  <button id="btRemote" class="button bt-opponent" (click)="onClickOpponentRemote()" disabled="true">
+  <button id="btRemote" class="button bt-opponent" (click)="onClickOpponentRemote()">
     <div class="bt-opponent__icon">🌍</div>
     <div class="bt-opponent__text">Remote player</div>
   </button>
