refactor: split functionality amongs pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,5 @@
 <main class="main">
-  <header class="logo">
-    <div class="logo__icons">
-      <div class="logo__icons--rock">✊</div>
-      <div class="logo__icons--paper">🖐</div>
-      <div class="logo__icons--scissors">✌️</div>
-    </div>
-    <h1 class="logo__title">ROCK PAPER SCISSORS</h1>
-  </header>
+  <logo />
   <section class="pages">
     <router-outlet />
   </section>
