--- a/src/app/styles/elements/box.scss
+++ b/src/app/styles/elements/box.scss
@@ -1,9 +1,24 @@
-:root {
-  --box-color: rgba(255, 200, 62, 0.2);
-  --box-color--border: rgba(255, 200, 62, 1);
-}
+@use "./text.scss";
 
 .box {
+  --box-color: rgba(255, 200, 62, 0.2);
+  --box-color--border: rgba(255, 200, 62, 1);
+
+  &.player-1-colors {
+    --box-color: rgba(207, 236, 247, 1);
+    --box-color--border: rgba(28, 150, 197, 1);
+  }
+
+  &.player-2-colors {
+    --box-color: rgba(244, 193, 193, 1);
+    --box-color--border: rgba(199, 0, 0, 1);
+  }
+
+  &.player-3-colors {
+    --box-color: rgba(240, 247, 218, 1);
+    --box-color--border: rgba(54, 128, 45, 1);
+  }
+
   box-sizing: border-box;
   border-radius: calc(var(--size) * 10);
   border: calc(var(--size) * 4) solid var(--box-color--border);
@@ -12,5 +27,52 @@
   --box-shadow-color: rgba(0, 0, 0, 0.3);
   box-shadow: 0px 5px 10px -3px var(--box-shadow-color);
 
+  position: relative;
   padding: calc(var(--size) * 4);
+
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: calc(var(--size) * 6);
+  }
+
+  .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .title,
+    .score {
+      @extend .text;
+      font-size: var(--text-size--subtitle);
+    }
+
+    .title {
+      text-align: left;
+      text-transform: capitalize;
+    }
+
+    .score {
+      display: flex;
+      flex-direction: row;
+    }
+  }
+
+  label {
+    @extend .text;
+    font-size: calc(var(--text-size--subtitle) / 1.5);
+    align-self: center;
+
+    @media screen and (min-width: 768px) {
+      font-size: calc(var(--text-size--subtitle) / 2);
+    }
+  }
 }
