feat: add absolute route shortcuts

--- a/src/app/pages/result/result.component.scss
+++ b/src/app/pages/result/result.component.scss
@@ -1,5 +1,5 @@
-@use "./../../styles/elements/box.scss";
-@use "./../../styles/elements/button.scss";
+@use "@/styles/elements/box.scss";
+@use "@/styles/elements/button.scss";
 
 :host {
   height: 100%;
