--- a/src/app/pages/selection/selection.component.scss
+++ b/src/app/pages/selection/selection.component.scss
@@ -1,5 +1,5 @@
-@use "./../../styles/elements/box.scss";
-@use "./../../styles/elements/text.scss";
+@use "@/styles/elements/box.scss";
+@use "@/styles/elements/text.scss";
 
 :host {
   @extend .box;
